[package]
name = "Minesweeper_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = { version= "0.2.69", features = ["serde-serialize"] }
getrandom = {version = "0.2.6", features = ["js"]}
serde = {version="1.0.137", features= ["derive"]}
js-sys = "0.3.57"
web-sys = {version="0.3.57", features=["console"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"